app/.cxx/cmake/debug/armeabi-v7a/android_gradle_build_native-lib_armeabi-v7a.stdout.txt
ninja: Entering directory `/home/sascharoth/Development/git/VmCracker/app/.cxx/cmake/debug/armeabi-v7a'
[1/2] Building CXX object CMakeFiles/native-lib.dir/hooker/injector.cpp.o
FAILED: CMakeFiles/native-lib.dir/hooker/injector.cpp.o 
/home/sascharoth/Android/Sdk/ndk/20.0.5594570/toolchains/llvm/prebuilt/linux-x86_64/bin/clang++ --target=armv7-none-linux-androideabi19 --gcc-toolchain=/home/sascharoth/Android/Sdk/ndk/20.0.5594570/toolchains/llvm/prebuilt/linux-x86_64 --sysroot=/home/sascharoth/Android/Sdk/ndk/20.0.5594570/toolchains/llvm/prebuilt/linux-x86_64/sysroot  -Dnative_lib_EXPORTS  -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -fno-addrsig -march=armv7-a -mthumb -Wa,--noexecstack -Wformat -Werror=format-security  -std=c++14 -O0 -fno-limit-debug-info  -fPIC -MD -MT CMakeFiles/native-lib.dir/hooker/injector.cpp.o -MF CMakeFiles/native-lib.dir/hooker/injector.cpp.o.d -o CMakeFiles/native-lib.dir/hooker/injector.cpp.o -c /home/sascharoth/Development/git/VmCracker/app/src/main/cpp/hooker/injector.cpp
/home/sascharoth/Development/git/VmCracker/app/src/main/cpp/hooker/injector.cpp:38:2: error: "UNSUPPORTED"
#error "UNSUPPORTED"
 ^
1 error generated.
ninja: build stopped: subcommand failed.
